--- a/index.html
+++ b/index.html
@@ -1,520 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hungry!</title>
-    <style media="screen"></style>
+<meta charset="utf-8">
+<title></title>
 </head>
-
-<style>
-* {
-    margin: 0;
-    width: 100%;
-    font-style: oblique;
-    height: auto
-}
-
-.menu>h2 {
-    color: blue
-}
-
-.dropbtn {
-    background-color: white;
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    text-shadow: 3px 3px 3px gray;
-    color: black;
-    border-style: hidden
-}
-
-.dropdown {
-    position: fixed;
-    display: none
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
-    display: block
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41
-}
-
-.parallax {
-    background-image: url("https://www.w3schools.com/w3images/hamburger.jpg");
-    min-height: 700px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover
-}
-
-.parallax2 {
-    background-image: url("https://image.freepik.com/free-photo/top-view-hand-holding-plate-wood-background_1150-6881.jpg");
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover
-}
-
-.parallax3 {
-    background-image: url("https://image.freepik.com/free-photo/burger-wrapped-paper-wooden-table-dark-background_77190-233.jpg");
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover
-}
-
-.element {
-    width: 100%;
-    height: auto;
-    font-size: 16px;
-    background-color: white;
-    height: auto;
-    display: flex;
-    text-align: center
-}
-
-.element1 {
-    width: 100%;
-    height: auto;
-    font-size: 16px;
-    background-color: white;
-    height: auto;
-    display: flex;
-    text-align: center
-}
-
-.element2 {
-    width: 100%;
-    height: auto;
-    font-size: 16px;
-    background-color: white;
-    display: block;
-    text-align: center
-}
-
-.element1>.left {
-    width: 50%
-}
-
-.element1>.right {
-    width: 50%;
-    text-align: center
-}
-
-.map {
-    width: 100%;
-    height: 500px;
-    display: none
-}
-
-.menu {
-    margin-top: 5%
-}
-
-input[type=text],
-select,
-textarea {
-    width: 90%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical
-}
-
-label {
-    padding: 12px 12px 12px 0;
-    display: inline-block
-}
-
-.container {
-    border-radius: 5px;
-    background-color: white;
-    padding: 20px;
-    font-weight: bold
-}
-
-.col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px
-}
-
-.col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both
-}
-
-@media screen and (max-width: 600px) {
-    .col-25,
-    .col-75,
-    input[type=submit] {
-        width: 100%;
-        margin-top: 0
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .element1 {
-        display: block;
-        margin-left: 25%
-    }
-}
-
-.button {
-    background-color: #E8BD8E;
-    border: 5px;
-    color: black;
-    font-weight: bold;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 30px;
-    margin: 4px 2px;
-    cursor: pointer
-}
-
-#top {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: none;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer
-}
-
-.slideUp {
-    animation-name: slideUp;
-    -webkit-animation-name: slideUp;
-    animation-duration: 2s;
-    -webkit-animation-duration: 2s;
-    visibility: visible;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%
-}
-
-#myImg {
-    margin-top: 3%;
-    margin-bottom: 3%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%
-}
-
-.slideUp2 {
-    animation-name: slideUp;
-    -webkit-animation-name: slideUp;
-    animation-duration: 3s;
-    -webkit-animation-duration: 3s;
-    visibility: visible
-}
-
-.slideUp3 {
-    animation-name: slideUp;
-    -webkit-animation-name: slideUp;
-    animation-duration: 2s;
-    -webkit-animation-duration: 2s;
-    visibility: visible
-}
-
-@keyframes slideUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(70%)
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0%)
-    }
-}
-
-@-webkit-keyframes slideUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(70%)
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0%)
-    }
-}
-
-</style>
-
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="dropdown">
-                <button class="dropbtn">
-                    <div id="demo"></div>
-                </button>
-                <div class="dropdown-content"> <a href="#" id="home">Home</a> <a href="#" id="menu">Our menu</a> <a href="#" id="who">Who are we?</a> <a href="#" id="map">Map</a> <a href="#" id="contact">Contact us</a></div>
-            </div>
-        </header>
-        <div class="parallax" id="getup"></div>
-        <div id="element1" class="element1">
-            <div class="left"> <img id="myImg" src="https://www.w3schools.com/w3images/tablesetting2.jpg"></div>
-            <div class="right">
-                <main id="myImg2">
-                    <h1>Our menu</h1>
-                    <div class="menu">
-                        <h2>Bread Basket</h2>
-                        <h3>Assortment of fresh baked fruit breads and muffins 5.50</h3>
-                        <h2>Honey Almond Granola with Fruits</h2>
-                        <h3>Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</h3>
-                        <h2>Belgian Waffle</h2>
-                        <h3>Vanilla flavored batter with malted flour 7.50</h3>
-                        <h2>Scrambled eggs</h2>
-                        <h3>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</h3>
-                        <h2>Blueberry Pancakes</h2>
-                        <h3>With syrup, butter and lots of berries 8.50</h3>
-                        <h2>Belgian Waffle</h2>
-                        <h3>Vanilla flavored batter with malted flour 7.50</h3>
-                        <h2>Scrambled eggs</h2>
-                        <h3>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</h3>
-                        <h2>Belgian Waffle</h2>
-                        <h3>Vanilla flavored batter with malted flour 7.50</h3>
-                        <h2>Scrambled eggs</h2>
-                        <h3>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</h3>
-                        <h2>Blueberry Pancakes</h2>
-                        <h3>With syrup, butter and lots of berries 8.50</h3>
-                        <h2>Belgian Waffle</h2>
-                        <h3>Vanilla flavored batter with malted flour 7.50</h3>
-                        <h2>Blueberry Pancakes</h2>
-                        <h3>With syrup, butter and lots of berries 8.50</h3></div>
-                </main>
-            </div>
-        </div>
-        <div class="parallax2"></div>
-        <div class="element2">
-            <aside id="myImg3">
-                <h1>HUNGER</h1>
-                <h1>WON</h1>
-                <h1>THE</h1>
-                <h1>FIRST</h1>
-                <h1>PLACE</h1>
-                <h1>IN</h1>
-                <h1>SERVICING</h1>
-                <h1>THE</h1>
-                <h1>MOST</h1>
-                <h1>DELICIOUS</h1>
-                <h1>HUMBURGER</h1>
-                <h1>IN</h1>
-                <h1>SWEDEN</h1></aside>
-        </div>
-        <div class="parallax3"></div>
-        <iframe class="map" title="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8370.188156513443!2d12.330589937519672!3d58.367310755304494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46452308d461ec5b%3A0x4e77bf81d2ae9c9f!2sBirger+Sj%C3%B6berggymnasiet!5e0!3m2!1ssv!2sse!4v1552851370375" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div class="element">
-            <div class="container">
-                <article id="myImg4">
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="fname">First Name</label>
-                        </div>
-                        <div class="col-75">
-                            <input type="text" id="fname" class="firstname" name="firstname" placeholder="Your name..">
-                            <p class="answerF"></p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="lname">Last Name</label>
-                        </div>
-                        <div class="col-75">
-                            <input type="text" id="lname" class="lastname" name="lastname" placeholder="Your last name..">
-                            <p class="answerL"></p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="fname">Number</label>
-                        </div>
-                        <div class="col-75">
-                            <input type="text" id="number" class="number" name="firstname" placeholder="Your number..">
-                            <p class="answerN"></p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="lname">Gmail</label>
-                        </div>
-                        <div class="col-75">
-                            <input type="text" id="gmail" class="lastname" name="lastname" placeholder="Your gmail..">
-                            <p class="answerG"></p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="country">Country</label>
-                        </div>
-                        <div class="col-75">
-                            <select id="country" name="country">
-                                <option value="australia">Australia</option>
-                                <option value="canada">Canada</option>
-                                <option value="usa">USA</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-25">
-                            <label for="subject">Subject</label>
-                        </div>
-                        <div class="col-75">
-                            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-                        </div>
-                    </div <div class="row">
-                    <button type="submit" class="button">submit</button>
-            </div>
-        </div>
-        </article>
-    </div>
-    <footer>
-        <button type="submit" id="top">top</button>
-    </footer>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script> 
-        $(document).ready(function() {
-    $('img').hide();
-    $('main').hide();
-    $('aside').hide();
-    $('article').hide();
-
-    function myFunction() {
-        if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
-            document.getElementById("myImg").className = "slideUp";
-            document.getElementById("myImg2").className = "slideUp2";
-            document.getElementById("myImg").setAttribute("style", "display:visible");
-            document.getElementById("myImg2").setAttribute("style", "display:visible");
-        }
-        if (document.body.scrollTop > 1500 || document.documentElement.scrollTop > 1500) {
-            document.getElementById("myImg3").className = "slideUp3";
-            document.getElementById("myImg3").setAttribute("style", "display:visible");
-        }
-        if (document.body.scrollTop > 2700 || document.documentElement.scrollTop > 2700) {
-            document.getElementById("myImg4").className = "slideUp3";
-            document.getElementById("myImg4").setAttribute("style", "display:visible");
-        }
-    }
-    window.onscroll = function() {
-        myFunction();
-    };
-    $('.dropdown').show();
-    $('.map').show();
-    $('#top').show();
-    $("#menu").click(function() {
-        $('html,body').animate({
-            scrollTop: $(".element1").offset().top
-        }, 2000);
-    });
-    $("#who").click(function() {
-        $('html,body').animate({
-            scrollTop: $(".element2").offset().top
-        }, 2000);
-    });
-    $("#contact").click(function() {
-        $('html,body').animate({
-            scrollTop: $(".container").offset().top
-        }, 2000);
-    });
-    $("#top").click(function() {
-        $('html,body').animate({
-            scrollTop: $("#getup").offset().top
-        }, 2000);
-    });
-    $("#map").click(function() {
-        $('html,body').animate({
-            scrollTop: $(".map").offset().top
-        }, 2000);
-    });
-    $("#home").click(function() {
-        $('html,body').animate({
-            scrollTop: $(".parallax").offset().top
-        }, 2000);
-    });
-
-    function testInfo(input, re, textsvar) {
-        var OK = re.exec(input);
-        if (!OK) $(textsvar).text("fel");
-        else $(textsvar).text("ok");
-    }
-    $("#number").keyup(function() {
-        var re = /^[0]{1}[0-9]{6,15}$/;
-        testInfo($('#number').val(), re, ".answerN");
-    });
-    $("#fname").keyup(function() {
-        var re = /^[A-Za-z]+$/;
-        testInfo($('#fname').val(), re, ".answerF");
-    });
-    $("#lname").keyup(function() {
-        var re = /^[A-Za-z]+$/;
-        testInfo($('#lname').val(), re, ".answerL");
-    });
-    $("#gmail").keyup(function() {
-        var re = /^(([^<>()[]\.,;:s@"]+(.[^<>()[]\.,;:s@"]+)*)|(".+"))@(([[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}])|(([a-zA-Z-0-9]+.)+[a-zA-Z]{2,}))$/;
-        testInfo($('#gmail').val(), re, ".answerG");
-    });
-    var i = 0;
-    var txt = 'Welcome to Hungry';
-    var speed = 100;
-
-    function typeWriter() {
-        if (i < txt.length) {
-            document.getElementById("demo").innerHTML += txt.charAt(i);
-            i++;
-            setTimeout(typeWriter, speed);
-        }
-    }
-    typeWriter();
-});
-
-    </script>
+    <h1>hasd</h1>
 </body>
-
 </html>
