--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title></title>
 </head>
 <body>
-    <h1>hasd</h1>
+    <h1>First try on the internet</h1>
+    <img src="https://i.ytimg.com/vi/MOWDb2TBYDg/maxresdefault.jpg">
 </body>
 </html>
