--- a/martin.html
+++ b/martin.html
@@ -3,9 +3,18 @@
 <head>
 <meta charset="utf-8">
 <title></title>
+<style>
+   div {
+    background-color: #008080;
+    text-align: center;
+   }
+</style>
+
 </head>
 <body>
+    <div>
     <h1>This is my friend Martin</h1>
     <img src="https://pbs.twimg.com/profile_images/2718342895/7b95a8969ef92060c95f5621c5e84c4d_400x400.png">
+    </div>
 </body>
 </html>
