--- a/martin.html
+++ b/martin.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <title></title>
 <style>
+    *{
+        margin:0;    
+    }
+
    div {
     background-color: #008080;
     text-align: center;
