--- a/martin.html
+++ b/martin.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div>
-    <h1>This is my friend Martin</h1>
+    <h1>This is Martin Johnte</h1>
     <img src="https://pbs.twimg.com/profile_images/2718342895/7b95a8969ef92060c95f5621c5e84c4d_400x400.png">
     </div>
 </body>
