--- a/dubai2.html
+++ b/dubai2.html
@@ -8,6 +8,7 @@
     <h1>Love this country</h1>
     <img src="https://images.musement.com/cover/0002/45/dubai-skyline-at-dusk-jpg_header-144981.jpeg?&q=60&fit=crop&lossless=true&auto=format&w=412&h=250">
         <img src="https://images.musement.com/cover/0002/45/dubai-skyline-at-dusk-jpg_header-144981.jpeg?&q=60&fit=crop&lossless=true&auto=format&w=412&h=250">
+                <img src="https://images.musement.com/cover/0002/45/dubai-skyline-at-dusk-jpg_header-144981.jpeg?&q=60&fit=crop&lossless=true&auto=format&w=412&h=250">
 
 </body>
 </html>
