--- a/sky.html
+++ b/sky.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Beutiful sky</h1>
+    <h2>Just look at the beauty of this world</h2>
     <img src="https://images.pexels.com/photos/875858/pexels-photo-875858.png?cs=srgb&dl=animal-avian-bird-875858.jpg&fm=jpg" style="width:700px;">
 </body>
 </html>
