--- a/sky.html
+++ b/sky.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -7,6 +8,7 @@
 <body>
     <h1>Beutiful sky</h1>
     <h2>Just look at the beauty of this world</h2>
+    <h2>Close you're eyes and look at the sky</h2>
     <img src="https://images.pexels.com/photos/875858/pexels-photo-875858.png?cs=srgb&dl=animal-avian-bird-875858.jpg&fm=jpg" style="width:700px;">
 </body>
 </html>
