--- a/hunter/daniel.html
+++ b/hunter/daniel.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 <title></title>
 <style>
+    *{
+        margin:0;
+    }
     img {
         margin-left:100px;
         margin-right:100px;
