--- a/firstWeb.html
+++ b/firstWeb.html
@@ -12,6 +12,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  width: 100%;
 }
 
 li {
@@ -36,7 +37,11 @@ li a:hover:not(.active) {
 
     img {
         min-height: 400px;
-    
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover
+        
         }
 </style>
 </head>
