--- a/hunter/mercedes.html
+++ b/hunter/mercedes.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title></title>
 </head>
-<body style="text-align:center">
+<body style="text-align:center;background-color:gray;margin:0">
     <h1>Mercedes</h1>
     <img src="https://spectrum.ieee.org/image/Mjg4MDg5OQ.jpeg">
 </body>
