--- a/hunter/waste.html
+++ b/hunter/waste.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8">
 <title></title>
 </head>
+<style>
+*{
+    background-color: #008080;    
+}
+</style>
 <body>
 TIme to waste time
 </body>
