--- a/hunter/amazing.html
+++ b/hunter/amazing.html
@@ -4,6 +4,14 @@
 <meta charset="utf-8">
 <title></title>
 </head>
+
+<style>
+*{
+    background-color: #008080;    
+    text-align: center;
+}
+
+</style>
 <body>
     <h1> This is amazing! </h1>
 </body>
