--- a/hunter/width.html
+++ b/hunter/width.html
@@ -4,6 +4,17 @@
 <meta charset="utf-8">
 <title></title>
 </head>
+
+<style>
+*{
+    background-color: #008080;
+    text-align:center;
+    font-size:30px;
+    font-weight: bold;
+    line-height: 200px;
+    margin: 0;
+}
+</style>
 <body>
 width=0;
 </body>
