--- a/hunter/MyFirstWebsite.html
+++ b/hunter/MyFirstWebsite.html
@@ -9,7 +9,8 @@
 
 <style>
 *{
-    background-color: #008080;
+    background-color: black;
+    color: white;
     text-align: center;
     line-height: 200px;
     margin: 0;
